# logsnarf

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: .readthedocs.yaml  Makefile  requirements.txt
docs/source/: conf.py  configuration.rst  index.rst  logsnarf.app.rst  logsnarf.config.rst  logsnarf.errors.rst  logsnarf.rst  logsnarf.schema.rst  logsnarf.service.rst  logsnarf.snarf.rst  logsnarf.state.rst  logsnarf.uploader.rst  logsnarf_rsyslog.rst  schema_file.rst
docs/source/examples/: README  lognorm.rulebase  logsnarf-rsyslog.conf  syslog_schema.json
src/logsnarf/: __init__.py  app.py  config.py  errors.py  schema.py  service.py  snarf.py  state.py  uploader.py
src/logsnarf/docs/: twisted.py
src/logsnarf/test/: schema_test_utils.py  test_config.py  test_schema.py  test_snarf.py  test_state.py
src/logsnarf/test/data/schema/simple/: schema.json
src/logsnarf/test/data/schema/simple/fail/: missing_required.json  not_an_int.json
src/logsnarf/test/data/schema/simple/pass/: all_fields_as_strings.json  all_fields_as_strings.py  basic.json  basic.py  repeated_field_as_list.json  repeated_field_as_list.py
src/logsnarf/test/data/schema/syslog/: schema.json
