[tool.poetry]
name = "logsnarf"
version = "0.1.0"
description = ""
authors = ["David MacKinnon <blaedd@gmail.com>"]
readme = "README.md"
packages = [{include = "logsnarf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
googleapis-common-protos = "^1.59.1"
pytz = "^2023.3"
protobuf = "^4.23.3"
arrow = "^1.2.3"
python-dateutil = "^2.8.2"
pyxdg = "^0.28"
rsa = "^4.9"
requests = "^2.31.0"
simplejson = "^3.19.1"
google-api-python-client = "<2"
pyopenssl = "^23.2.0"
twisted = "^22.10.0"
oauth2client = "^4.1.3"
service-identity = "^23.1.0"


[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"

[build-system]
requires = ["poetry-core","doctuils", "sphinx-rtd-theme", "Sphinx"]
build-backend = "poetry.core.masonry.api"
